# VERCEL-CLONE

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.build-runner  README.md  docker-compose.yml
.pi/tasks/session-43796-43796/: bea6bcf74.json
arc-web/: Cargo.toml  index.html
arc-web/src/: app.rs  icons.rs  lib.rs  main.rs  styles.rs
arc-web/src/dashboard/: analytics.rs  components.rs  mod.rs  overview.rs  project_detail.rs  projects.rs  settings.rs
arc-web/src/landing/: code_block.rs  comparison.rs  cta_final.rs  faq.rs  features.rs  footer.rs  hero.rs  how_it_works.rs  mod.rs  pricing.rs  testimonials.rs
caddy/: Caddyfile
src/: config.rs  dashboard.rs  github.rs  main.rs  tests.rs
src/api/: handlers.rs  mod.rs
src/builder/: firecracker.rs  framework.rs  functions.rs  image_opt.rs  mod.rs  warm_pool.rs
src/db/: mod.rs
src/edge/: middleware.rs  mod.rs
src/models/: mod.rs
src/queue/: mod.rs
src/storage/: mod.rs
