[package]
name = "arc-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "arc-web"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "Event", "ErrorEvent", "CloseEvent", "Window"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
